//  Copyright (c) 2013, Google Inc.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package fileproxy;

enum MessageType {
   REQUEST = 1;
   RESPONSE = 2;
   FILE_NEXT = 3;
   FILE_LAST = 4;
   PROTOCOL_RESPONSE= 5;
 }

message FPMessage {
  required  int32   message_type = 1;
  optional  string  subject_name = 2;
  optional  string  action_name = 3;
  optional  string  resource_name = 4;
  optional  string  resource_owner= 5;
  optional  string  status_of_request = 6;
  optional  string  message_from_request = 7;
  optional  int32   buffer_size = 8;
  optional  string  the_buffer = 9;
}

message FPResourceMaster {
  optional  string  prin_name = 1;
  optional  string  baseDirectory_name = 2;
  required  int32   num_fileinfos = 3;
}

message FPResourceInfo {
  required string resource_name = 1;
  required string resource_type = 2;
  required string resource_status = 3;
  required string resource_location= 4;
  optional int32  resource_size= 5;
  optional string resource_owner= 6;
}

message FPPrincipalInfo {
  required string principal_name = 1;
  required string principal_cert= 2;
  required string principal_status = 3;
}


